--- a/Tserenchimed biydaalt Website/samoyed.html
+++ b/Tserenchimed biydaalt Website/samoyed.html
@@ -22,7 +22,7 @@ body {
   left: 20px;
 }
 header {
-  background-image: url("/public/images/a4a22252ec2fc739bab54b72a95aaa46.jpg");
+  background-image: url("public/images/a4a22252ec2fc739bab54b72a95aaa46.jpg");
   padding: 30px;
   text-align: center;
   font-size: 40px;
@@ -32,7 +32,7 @@ nav {
   float: left;
   width: 30%;
   height: 500px; 
-  background-image: url("/public/images/images.jpg");
+  background-image: url("public/images/images.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   padding: 20px;
@@ -51,7 +51,7 @@ article {
     <header>
       <h2>Нохойны үүлдрүүд</h2>
       <a href="uulder.html" class="logo">
-        <img src="/public/images/logo.png" alt="">
+        <img src="public/images/logo.png" alt="">
     </a>
     </header>
     
