--- a/Tserenchimed biydaalt Website/uulder.html
+++ b/Tserenchimed biydaalt Website/uulder.html
@@ -24,7 +24,7 @@ body {
   font-family:  sans-serif;
 }
 header {
-  background-image: url("/public/images/a4a22252ec2fc739bab54b72a95aaa46.jpg");
+  background-image: url("public/images/a4a22252ec2fc739bab54b72a95aaa46.jpg");
   padding: 30px;
   text-align: center;
   font-size: 40px;
@@ -58,14 +58,14 @@ article {
   height: 300px; 
 }
 footer {
-  background-image: url("/public/images/a4a22252ec2fc739bab54b72a95aaa46.jpg");
+  background-image: url("public/images/a4a22252ec2fc739bab54b72a95aaa46.jpg");
   background-position:center;
 }
     </style>
     <header>
       <h2>Нохойны үүлдрүүд</h2>
         <a href="web.html" class="logo">
-            <img src="/public/images/logo.png" alt="">
+            <img src="public/images/logo.png" alt="">
         </a>
     </header>
     
