--- a/Tserenchimed biydaalt Website/web.html
+++ b/Tserenchimed biydaalt Website/web.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <a href="#" class="logo">
-            <img src="/public/images/logo.png" alt="">
+            <img src="public/images/logo.png" alt="">
         </a>
         <div class="menu">
             <div class="toggle"><ion-icon name="caret-forward-circle-outline"></ion-icon></div>
